# Underwater-Visual-System

./: README.md  camera_configs_danmu.py  get_o_point.py  landing.py  map.py  record_video.py  take_video.py  yolo_distance4.py
docking/: calibrate2.py  camera_configs_danmu.py  landing_air.py
following/followmanta_sesssion/: camera_configs.py  camera_configs_danmu.py  get_o_point.py  getdepth1.py  getdepth2.py  landing.py  landing_air.py  map.py  notcp_new_map8.py  record_video.py  take_video.py  test.py  train_manta.py  try.py
obstacle_avoidance/: camera_configs.py  obstacle_depth.py  obstacle_grid_avoid.py  readme.md  timer.py  try.py  try_call.py
positioning/aruco-3.1.12/: run.sh  run_1.sh
positioning/aruco-3.1.12/src/: posetracker.cpp
positioning/aruco-3.1.12/utils_markermap/: aruco_test_markermap.cpp  aruco_test_markermap_2.cpp  sglviewer.h
positioning/marker_mapper1.0.15/: CMakeLists.txt  look_pcd.sh  run.sh
positioning/marker_mapper1.0.15/src/: CMakeLists.txt
positioning/marker_mapper1.0.15/utils/: CMakeLists.txt  mapper_from_video.cpp
positioning/run-2024.11.26-151120-RGS/run/: -  location (copy).sh  location.sh  look_map.sh  look_trackout.sh  mapper.sh  run_autoswim.sh  run_duidi.sh  try.sh
positioning/run-2024.11.26-151120-RGS/run/l_v2/: markerset-cam.yml  markerset.yml  out.pcd  out.txt
positioning/run-2024.11.26-151120-RGS/run/v1/: markerset-cam.yml  markerset.pcd  markerset.yml  out_camera_calibration.yml
